--- a/app/src/main/res/layout/activity_family_members.xml
+++ b/app/src/main/res/layout/activity_family_members.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/normalFAB"
+        android:id="@+id/addFamilyMember"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
